# ethical-fabrication

./: Glock project V1 (Updated Draft).stl  README.md  cup.stl  datatest.py  prediction.hpp  predictor.cpp  runmodel.py  slicer.py  torchscript.py
DLPSlicerPython/: DLPSlicerPython.py  DLPSlicerPython.spec  Gun.stl  cone.stl  cube.stl
c++ files/: CMakeLists.txt  main.cpp
cpp_files/: CMakeLists.txt  ethicalfab  inference_app  predictor.cpp
docs/: procedures.txt  proposal.md
models/: 3DCNN.ipynb  CNNLSTM.ipynb
models/save/: cnnlstm_e5_611acdcefc1711f097b4bab6975ba98b.pkl
python files/: changing_file_structure.ipynb  loadmodel.ipynb  runmodel.py
python files/util/: DPtrain.py  cnn3d.py  slicer.py  testdata_generate.py
util/: data_generate.py  train.py
